# lts_reltool

./: Alt_Fernandez_modules.ml  LTS_modules.ml  LTS_modules_test.ml  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  index.html  params.json  random_lts.cpp  relts.ml  script.sh  ta_wrapper.sh
test/: l03.dot  l04.dot  l05.dot  l06.dot  l07.dot  l08.dot  l09.dot  l10.dot  l11.dot  l12.dot  l13.dot  l14.dot  l15.dot  l16.dot  l17.dot  l18.dot  l19.dot  l20.dot  l21.dot  l22.dot  l23.dot  l24.dot  l25.dot  test93.ml  test94.ml
